iptables.rules
# Generated by iptables-save v1.4.21 on Mon Sep 14 14:38:04 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [4040:988493]
:logdrop - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j logdrop
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 25/min -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j logdrop
-A FORWARD -i wlan0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -j ACCEPT
-A FORWARD -i eth0 -o tun0 -j ACCEPT
-A FORWARD -i tun0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j logdrop
-A logdrop -m limit --limit 5/min --limit-burst 10 -j LOG --log-prefix "[BLOCK] "
-A logdrop -j DROP
COMMIT
# Completed on Mon Sep 14 14:38:04 2015
# Generated by iptables-save v1.4.21 on Mon Sep 14 14:38:04 2015
*nat
:PREROUTING ACCEPT [2138:437985]
:INPUT ACCEPT [1:84]
:OUTPUT ACCEPT [1718:107836]
:POSTROUTING ACCEPT [2:120]
-A POSTROUTING -o wlan0 -j MASQUERADE
-A POSTROUTING -o tun0 -j MASQUERADE
COMMIT
# Completed on Mon Sep 14 14:38:04 2015
